# eq18_turkish_music_mlops

./: .dockerignore  .gitignore  Dockerfile  README.md  api.py  docker-compose.yml  dvc.yaml  params.yaml  pyproject.toml  pytest.ini  requirements.txt  run_tests.sh
.github/workflows/: cd.yml  ci.yml
data/drift/: test_drift_energy.csv  test_drift_tempo.csv
data/processed/: test_baseline_tempo.csv
docs/docs/: notes.md
drift/: detect_drift.py  simulate_drift_test.py
eq18_turkish_music_mlops/: evaluate.py  prepare.py  train.py
eq18_turkish_music_mlops/modeling/: train.py
eq18_turkish_music_mlops/preprocessing/: preprocesor.py  splitter.py
eq18_turkish_music_mlops/utils/: logger.py  mlflow.py  transformers.py
models/: .gitignore
notebooks/: 3_emc_model_training.ipynb  3_eq18_FinalFase_1_monolitico.ipynb
reports/: .gitignore
tests/: __init__.py  conftest.py  test_evaluate.py  test_integration_pipeline.py  test_mlflow_utils.py  test_pipeline.py  test_prepare.py  test_train.py  test_transformer.py  test_transformers.py
