[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "eq18_turkish_music_mlops"
version = "0.0.1"
description = "Clasificaci\u00f3n de Emociones en M\u00fasica Turca Usando Machine Learning"
authors = [
  { name = "Equipo_18" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = ">=3.11"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.isort]
profile = "black"
known_first_party = ["eq18_turkish_music_mlops"]
force_sort_within_sections = true


